[package]
name = "frigate"
description = "A dotfile manager."
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
clap = {version = "3.0.0-rc.4", features = ["color", "derive", "std", "suggestions", "wrap_help"]}
